--- a/src/Lab3/appsettings.json
+++ b/src/Lab3/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PersonDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
